# pico-art-net-node

./: .gitignore  .gitmodules  README.md  build.sh
.github/workflows/: cmake-single-platform.yml
Code/: CMakeLists.txt
Code/lib/: CMakeLists.txt
Code/src/: CMakeLists.txt
Code/src/firmware/: CMakeLists-12c_bus_scan.txt  CMakeLists.txt  config.c  config.h  dmx-test.cpp  i2c_bus_scan.cpp  main.c  main.cpp  main.h  ssd1306.c  ssd1306.h
Code/src/firmware/V1/: main.cpp  main.h
Code/src/lib/: CMakeLists.txt
Kicad/: #auto_saved_files#  fp-info-cache  fp-lib-table  pico-artnet-node.bak  pico-artnet-node.kicad_pcb  pico-artnet-node.kicad_prl  pico-artnet-node.kicad_pro  pico-artnet-node.kicad_sch  pico-artnet-node.kicad_sym  sym-lib-table  ~pico-artnet-node.kicad_sch.lck
Kicad/gerbers/: pico-artnet-node-B_Cu.gbr  pico-artnet-node-B_Mask.gbr  pico-artnet-node-B_Paste.gbr  pico-artnet-node-B_Silkscreen.gbr  pico-artnet-node-Edge_Cuts.gbr  pico-artnet-node-F_Cu.gbr  pico-artnet-node-F_Mask.gbr  pico-artnet-node-F_Paste.gbr  pico-artnet-node-F_Silkscreen.gbr  pico-artnet-node-NPTH.drl  pico-artnet-node-PTH.drl  pico-artnet-node-job.gbrjob
Kicad/pico-artnet-node.pretty/: RP2040-Zero.kicad_mod  w5500.kicad_mod
tools/dispsym/: main-cp.py  main.py
ui/: blank.pbm  dmx-disabled.pbm  dmx-in.pbm  dmx-out.pbm  ethenet.pbm  wifi.pbm
